# rpm-s3-mirror

./: .flake8  .gitignore  .pylintrc  Makefile  README.md  fedora_s3_mirror.json  fedora_s3_mirror.spec  fedora_s3_mirror.unit  pyproject.toml  requirements.dev.txt  requirements.txt  rpm_s3_mirror.spec  rpm_s3_mirror.unit  setup.py  version.py
.github/workflows/: ci.yml
fedora_s3_mirror/: __main__.py  config.py  mirror.py  repository.py  s3.py  statsd.py  util.py
rpm_s3_mirror/: __main__.py  config.py  mirror.py  repository.py  s3.py  statsd.py  util.py
tests/: conftest.py  test_mirror.py  test_package.py  test_repository.py
tests/resources/: example-updateinfo.xml.zck  example-updateinfo.xml.zst  primary-one-changed.xml  primary.xml  repomd.xml
